--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -41,7 +41,7 @@
 <!-- END PRE-FOOTER -->
 <!-- BEGIN POST-FOOTER -->
 <div class="page-footer">
-    <div class="container"> 2018 &copy; Ethereum Classic. </div>
+    <div class="container"> 2018 &copy; Ethereum Fast. </div>
 </div>
 <div class="scroll-to-top">
     <i class="icon-arrow-up"></i>
