--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -5,34 +5,34 @@
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>About</h2>
                 <p> This is an open source Blockchain Explorer. </p>
-                <p> <a href="https://github.com/ethereumproject/explorer" target="_blank">Fork me on github.</a> </p>
+                <p> <a href="https://github.com/bitFather/Explorer_ETF" target="_blank">Fork me on github.</a> </p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>Follow Us On</h2>
                 <ul class="social-icons">
                     <li>
-                        <a href="http://ethereumclassic.org" data-original-title="rss" class="rss"></a>
+                        <a href="https://etfast.io" data-original-title="rss" class="rss"></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://www.reddit.com/r/EthereumClassic" data-original-title="reddit" class="reddit"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/ethereumclassic" data-original-title="twitter" class="twitter"></a>
+                        <a href="https://twitter.com/EthereumFast" data-original-title="twitter" class="twitter"></a>
                     </li>
                     <li>
                         <a href="https://github.com/ethereumproject" data-original-title="github" class="github"></a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/company/ethereum-classic" data-original-title="linkedin" class="linkedin"></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 footer-block">
                 <h2>Help, it's Broken!</h2>
                 <address class="margin-bottom-40"> 
-                    <br>Open an Issue: <a href="https://github.com/ethereumproject/explorer/issues">github</a>
-                    <br> <a href="mailto:elaine.ou@gmail.com">Email bug reports</a>
-                    <br> <a href="https://twitter.com/eiaine">Twit</a>
+                    <br>Open an Issue: <a href="https://github.com/bitFather/Explorer_ETF/issues">github</a>
+                    <br> <a href="support@etfast.io">Email bug reports</a>
+                    <!-- <br> <a href="https://twitter.com/eiaine">Twit</a> -->
                 </address>
             </div>
         </div>
