--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -44,7 +44,7 @@
                 <li class="active">
                     <a href="/">Home</a>
                 </li>
-                <li class="menu-dropdown mega-menu-dropdown ">
+                <!-- <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
                         <i class="fa fa-angle-down"></i>
                     </a>
@@ -81,8 +81,8 @@
                             </div>
                         </li>
                     </ul>
-                </li>
-                <li class="menu-dropdown mega-menu-dropdown ">
+                </li> -->
+                <!-- <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> Stats
                         <i class="fa fa-angle-down"></i>
                     </a>
@@ -110,8 +110,8 @@
                             </div>
                         </li>
                     </ul>
-                </li>
-                <li class="menu-dropdown classic-menu-dropdown ">
+                </li> -->
+                <!-- <li class="menu-dropdown classic-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;"> Misc
                         <i class="fa fa-angle-down"></i>
                     </a>
@@ -127,13 +127,13 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li class="menu-dropdown classic-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;"> Community
                         <i class="fa fa-angle-down"></i>
                     </a>
                     <ul class="dropdown-menu pull-left">
-                        <li>
+                        <!-- <li>
                           <a href="https://forum.ethereumclassic.org" target="_blank">
                               <i class="fa fa-group"></i>
                               <span class="title" data-toggle="tooltip" title="Community Chat"> The Forum</span>
@@ -145,30 +145,30 @@
                                 <i class="fa fa-leaf"></i>
                                 <span class="title" data-toggle="tooltip" title="ERC223 Token Factory" > TokenMint.io</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a href=" https://ethereumproject.github.io/etherwallet/ " target="_blank">
+                            <a href="https://airon.io" target="_blank">
                                 <i class="fa fa-folder-open"></i>
-                                <span class="title" data-toggle="tooltip" title="Client Side JS ETC Wallet"> ClassicEtherWallet.com</span>
+                                <span class="title" data-toggle="tooltip" title="Client Side JS ETF Wallet"> Airon.io </span>
                             </a>
                         </li>
                         <li>
-                            <a href="http://etcstats.net" target="_blank">
+                            <a href="mailto:support@etfast.io" target="_blank">
                                 <i class="fa fa-bar-chart"></i>
-                                <span class="title" data-toggle="tooltip" title="Mainnet Stats"> Live Network Stats </span>
+                                <span class="title" data-toggle="tooltip" title="Support"> Support </span>
                             </a>
                         </li>
                         <li>
-                            <a href="http://statebot.info" target="_blank">
+                            <a href="https://twitter.com/EthereumFast" target="_blank">
                                 <i class="fa fa-android"></i>
-                                <span class="title" data-toggle="tooltip" title="JSON state dumps for analysis"> Statebot.io </span>
+                                <span class="title" data-toggle="tooltip" title="ETF twitter"> @EthereumFast </span>
                             </a>
                         </li>
                         <hr>
                         <li>
-                            <a href="http://teststats.epool.io/" target="_blank">
+                            <a href="https://www.facebook.com/Ethereum-Fast-960654767436420/" target="_blank">
                                 <i class="fa fa-bar-chart"></i>
-                                <span class="title" data-toggle="tooltip" title="Live Testnet Stats">Morden network stats </span>
+                                <span class="title" data-toggle="tooltip" title="ETF facebook account"> Facebook </span>
                             </a>
                         </li>
 
